// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button button have icon only 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->
    <div class="fect-button__icon" style="left: 50%; transform: translate(-50%, -50%);"><svg width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" shape-rendering="geometricPrecision" style="" viewBox="0 0 24 24">
        <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
      </svg></div>
    <!---->
  </button></div>
`;

exports[`Button should be allow some status  1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--disabled fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--shadow fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be render as a element 1`] = `
<button class="fect-button fect-button--default fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
  <!---->
  <!---->Button
</button>
`;

exports[`Button should be support diferent types 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--success fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--button-success-color); --button-hover-color: var(--button-success-color);" type="button">
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--warning fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--button-warning-color); --button-hover-color: var(--button-warning-color);" type="button">
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--error fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--button-error-color); --button-hover-color: var(--button-error-color);" type="button">
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be support different sizes 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--mini" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--small" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--large" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--auto fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be support icon 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <!---->
    <!---->
    <div class="fect-button__icon" style="left: 15%; transform: translateY(-50%);"><svg width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" shape-rendering="geometricPrecision" style="" viewBox="0 0 24 24">
        <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
      </svg></div>
    <div class="fect-button__text"> Button </div>
  </button></div>
`;

exports[`Button should be support loadType and loadColor follow button color 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--loading fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="fect-loading__wrapper"><i class="fect-loading__default fect-loading__default--medium default"></i><i class="fect-loading__default fect-loading__default--medium default"></i><i class="fect-loading__default fect-loading__default--medium default"></i></span></div>
    </div>
    <!---->Button
  </button><button class="fect-button fect-button--success fect-button--loading fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--button-success-color); --button-hover-color: var(--button-success-color);" type="button">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="fect-loading__wrapper"><i class="fect-loading__cube fect-loading__cube--medium default"></i><i class="fect-loading__cube fect-loading__cube--medium default"></i><i class="fect-loading__cube fect-loading__cube--medium default"></i><i class="fect-loading__cube fect-loading__cube--medium default"></i></span></div>
    </div>
    <!---->Button
  </button><button class="fect-button fect-button--warning fect-button--loading fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--button-warning-color); --button-hover-color: var(--button-warning-color);" type="button">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="fect-loading__wrapper"><i class="fect-loading__wave fect-loading__wave--medium default"></i><i class="fect-loading__wave fect-loading__wave--medium default"></i><i class="fect-loading__wave fect-loading__wave--medium default"></i><i class="fect-loading__wave fect-loading__wave--medium default"></i><i class="fect-loading__wave fect-loading__wave--medium default"></i></span></div>
    </div>
    <!---->Button
  </button></div>
`;

exports[`Button should trigger a effect 1`] = `
<button class="fect-button fect-button--default fect-button--medium" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
  <!---->
  <!---->Button
</button>
`;
